--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>Hangman Challenge</title>
+    <meta name="description" content="A modern and interactive Hangman game with multiple difficulty levels" />
+    <meta name="theme-color" content="#F4631E" />
   </head>
   <body>
     <div id="root"></div>
